--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .wrapper {
     position: absolute;
-    width:100%;
-    height:100%s;
+    max-width:100%;
+    
     top: 0px; left: 0px;
 }
 .backgroundMap {
@@ -16,5 +16,5 @@
     position: absolute;top:0px;left:0px;
     background-color: transparent;
     z-index: 2;
-    
+    width:100%;
 }
